<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/freelancer"
            android:contentDescription="@string/header_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/occupation"
            android:textSize="13sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/occ_desc"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/contact"
            android:textColor="@color/purple"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:drawableStart="@drawable/ic_phone_android_black_24dp"
                android:drawablePadding="4dp"
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/phone_number"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="4dp"
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/email"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:drawableStart="@drawable/ic_linkedin_black_24dp"
                android:drawablePadding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/linkedin"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:drawablePadding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_time"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>